--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Alexandra Jade Rodrigues</h1>
-    <h3 class="text-center"> Front-end developer, based in Cape Town, South Africa</h3>
+    <h1 class="text-center">Alexandra Jade</h1>
+    <h3 class="text-center">
+      Front-end developer, based in Cape Town, South Africa
+    </h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
