--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Alexandra Jade Rodrigues</a>
+        <a class="navbar-brand" href="index.html">Alexandra Jade</a>
         <button
           class="navbar-toggler"
           type="button"
