--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alexandra Jade Rodrigues</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
       crossorigin="anonymous"
     />
 
@@ -17,7 +17,7 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -65,11 +65,14 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded small-photo d-none d-sm-block"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
-          <p>
+          <p class="paragraphs">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -83,7 +86,7 @@
       <div class="row mt-5">
         <div class="col-6">
           <h2 class="mb-3">Weather app</h2>
-          <p>
+          <p class="paragraphs">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -94,24 +97,33 @@
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded small-photo d-none d-sm-block"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded small-photo d-none d-sm-block mb-5"
+          />
+          
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
-          <p>
+  
+          <p class="paragraphs">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
+      
         </div>
       </div>
     </div>
