--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Alexandra Jade is a front-end developer based in the Cape Town, South Africa, check out her projects and contact her for job inquiries"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alexandra Jade Rodrigues</title>
     <link
@@ -65,10 +69,7 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img
-            src="images/yoga.png"
-            class="img-fluid rounded small-photo d-none d-sm-block"
-          />
+          <img src="images/yoga.png" class="img-fluid rounded small-photo" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -78,7 +79,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
+          <div class="mt-10">
             <a href="#" class="primary-link">Launch Yoga App</a>
           </div>
         </div>
@@ -97,23 +98,16 @@
           </div>
         </div>
         <div class="col-6">
-          <img
-            src="images/weather.png"
-            class="img-fluid rounded small-photo d-none d-sm-block"
-          />
+          <img src="images/weather.png" class="img-fluid rounded small-photo" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img
-            src="images/yogurt.png"
-            class="img-fluid rounded small-photo d-none d-sm-block mb-5"
-          />
-          
+          <img src="images/yogurt.png" class="img-fluid rounded small-photo" />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
-  
+
           <p class="paragraphs">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -123,7 +117,6 @@
           <div class="mt-5">
             <a href="#" class="primary-link">Launch Yogurt App</a>
           </div>
-      
         </div>
       </div>
     </div>
